--- a/Depo/Depo/Presentation/UserStories/Grid/BaseFilesGreed/View/BaseFilesGreedViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Grid/BaseFilesGreed/View/BaseFilesGreedViewController.xib
@@ -18,6 +18,7 @@
             <connections>
                 <outlet property="collectionView" destination="0Sm-wn-Msc" id="6uf-wF-aXI"/>
                 <outlet property="floatingHeaderContainerHeightConstraint" destination="J3A-WS-4mi" id="c9c-o0-s47"/>
+                <outlet property="headerStackView" destination="acy-kT-cr5" id="6Ie-82-uaS"/>
                 <outlet property="noFilesImage" destination="qz2-SP-6oQ" id="rwb-kw-oSL"/>
                 <outlet property="noFilesLabel" destination="fdq-Cf-39W" id="gmp-PY-CFM"/>
                 <outlet property="noFilesTopLabel" destination="0lC-K4-1ac" id="TJd-tm-6eI"/>
