--- a/Depo/Depo/Presentation/UserStories/Settings/SetSecurityQuestionViewController/SelectQuestionViewController/QuestionCell/QuestionCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/SetSecurityQuestionViewController/SelectQuestionViewController/QuestionCell/QuestionCell.xib
@@ -1,25 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="QuestionCell" customModule="lifebox" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="QuestionCell" customModule="Billo" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" indentationWidth="10" reuseIdentifier="QuestionCell" rowHeight="80" id="KGk-i7-Jjw" customClass="QuestionCell" customModule="lifebox" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" indentationWidth="10" reuseIdentifier="QuestionCell" rowHeight="63" id="KGk-i7-Jjw" customClass="QuestionCell" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="319" height="74"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="319" height="73.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="319" height="74"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PgN-ZX-2xX">
-                        <rect key="frame" x="20" y="24" width="279" height="26"/>
+                        <rect key="frame" x="20" y="17" width="279" height="40"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -28,8 +26,8 @@
                 <constraints>
                     <constraint firstItem="PgN-ZX-2xX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="1q3-lR-oTD"/>
                     <constraint firstAttribute="trailing" secondItem="PgN-ZX-2xX" secondAttribute="trailing" constant="20" id="CaQ-Uj-6BJ"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="PgN-ZX-2xX" secondAttribute="bottom" constant="13" id="dP0-oe-zZ4"/>
-                    <constraint firstItem="PgN-ZX-2xX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="13" id="sWX-Jb-peN"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="PgN-ZX-2xX" secondAttribute="bottom" constant="6" id="dP0-oe-zZ4"/>
+                    <constraint firstItem="PgN-ZX-2xX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="6" id="sWX-Jb-peN"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
