--- a/Depo/Depo/Presentation/SubViews/TopBar/GridListCountView.xib
+++ b/Depo/Depo/Presentation/SubViews/TopBar/GridListCountView.xib
@@ -17,8 +17,8 @@
                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" translatesAutoresizingMaskIntoConstraints="NO" id="cNC-lN-aKc">
                     <rect key="frame" x="16" y="0.0" width="388" height="58"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o2h-Ek-sNR">
-                            <rect key="frame" x="0.0" y="0.0" width="41.5" height="58"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o2h-Ek-sNR">
+                            <rect key="frame" x="0.0" y="0.0" width="50" height="58"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
