--- a/Depo/Depo/Presentation/UserStories/Settings/ChangePassword/CaptchaView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ChangePassword/CaptchaView.xib
@@ -6,13 +6,13 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CaptchaView" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="captchaAnswerTextField" destination="25l-fN-bcD" id="ZvL-Cy-lXE"/>
+                <outlet property="captchaBackView" destination="F9F-BL-tyJ" id="0ZW-CP-pvc"/>
                 <outlet property="captchaImageView" destination="kWg-Vf-Rlr" id="KGs-Nd-rh1"/>
                 <outlet property="errorLabel" destination="gik-gC-tNq" id="QBq-3w-faJ"/>
                 <outlet property="lineView" destination="6WV-XE-0Ht" id="Vlw-Qp-JUO"/>
@@ -26,13 +26,13 @@
             <rect key="frame" x="0.0" y="0.0" width="358" height="144"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jt2-sq-4mO">
+                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jt2-sq-4mO">
                     <rect key="frame" x="0.0" y="0.0" width="358" height="144"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3h7-gb-EgQ">
+                        <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3h7-gb-EgQ">
                             <rect key="frame" x="0.0" y="0.0" width="358" height="80"/>
                             <subviews>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F9F-BL-tyJ">
+                                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F9F-BL-tyJ">
                                     <rect key="frame" x="0.0" y="0.0" width="316" height="80"/>
                                     <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="calibratedRGB"/>
                                 </view>
@@ -101,7 +101,7 @@
                                     </subviews>
                                 </stackView>
                             </subviews>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <color key="backgroundColor" name="primaryBackground"/>
                             <constraints>
                                 <constraint firstItem="0fs-JI-gHt" firstAttribute="leading" secondItem="XyF-Fi-gez" secondAttribute="leading" constant="16" id="Zvd-li-tb4"/>
                                 <constraint firstItem="0fs-JI-gHt" firstAttribute="top" secondItem="XyF-Fi-gez" secondAttribute="top" constant="6" id="dln-xn-njb"/>
@@ -109,7 +109,7 @@
                                 <constraint firstAttribute="trailing" secondItem="0fs-JI-gHt" secondAttribute="trailing" constant="16" id="zTL-Sw-ce3"/>
                             </constraints>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6WV-XE-0Ht">
+                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6WV-XE-0Ht">
                             <rect key="frame" x="0.0" y="143.5" width="358" height="0.5"/>
                             <color key="backgroundColor" name="primaryBackground"/>
                             <constraints>
@@ -150,8 +150,5 @@
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
